@@ -10,15 +10,14 @@ $Id$
   - Remove ecrt_master_run(). Make master FSM run in process context instead.
   - Remove addressing scheme "X:Y".
   - Allow only MAC address as device ID.
-  - Interface/buffers for asynchronous domain IO.
   - Remove ugly ec_slave_is_coupler() and ec_slave_has_subbus().
-  - Add statistics object.
+
+* Future features:
   - SDO dictionary and -access in operation mode.
   - SDO write access in sysfs.
   - Speed up IDLE-FSM through fast mode with schedule().
   - Evaluate EEPROM contents after writing.
-
-* Future features:
+  - Interface/buffers for asynchronous domain IO.
   - Distributed clocks.
   - Read dynamic PDO mapping from SDO dictionary (see can-cia.org: cia301ds4).
   - Redundancy with 2 network adapters.
@@ -27,13 +26,13 @@ $Id$
   - Optimize alignment of process data.
   - Calculate expected working counter for domains.
 
-* Smaller changes:
+* Smaller issues:
   - Simplify FSMs with <state>_enter() functions.
   - Dynamic creation of EoE handlers.
   - Output intermediate results during lsec.
   - State change FSM: Follow spontaneous state changes.
 
-* Less important changes:
+* Less important issues:
   - Implement all EtherCAT datagram types.
   - File access over EtherCAT (FoE).
   - Allow VLAN tagging.
