@@ -39,26 +39,29 @@
 #include "../../include/ecrt.h" // EtherCAT realtime interface
 #include "../../include/ecdb.h" // EtherCAT slave database
 
+#define PFX "ec_mini: "
+
 #define FREQUENCY 100
 
 //#define KBUS
 
 /*****************************************************************************/
 
-struct timer_list timer;
+static struct timer_list timer;
 
 // EtherCAT
-ec_master_t *master = NULL;
-ec_domain_t *domain1 = NULL;
+static ec_master_t *master = NULL;
+static ec_domain_t *domain1 = NULL;
 spinlock_t master_lock = SPIN_LOCK_UNLOCKED;
+static ec_master_status_t master_status, old_status = {};
 
 // data fields
 #ifdef KBUS
-void *r_inputs;
-void *r_outputs;
+static void *r_inputs;
+static void *r_outputs;
 #endif
 
-void *r_dig_out;
+static void *r_dig_out;
 
 #if 1
 ec_pdo_reg_t domain1_pdos[] = {
@@ -90,6 +93,26 @@ void run(unsigned long data)
     else {
         counter = FREQUENCY;
         blink = !blink;
+
+        spin_lock(&master_lock);
+        ecrt_master_get_status(master, &master_status);
+        spin_unlock(&master_lock);
+
+        if (master_status.bus_status != old_status.bus_status) {
+            printk(KERN_INFO PFX "bus status changed to %u.\n",
+                    master_status.bus_status);
+        }
+        if (master_status.bus_tainted != old_status.bus_tainted) {
+            printk(KERN_INFO PFX "tainted flag changed to %u.\n",
+                    master_status.bus_tainted);
+        }
+        if (master_status.slaves_responding !=
+                old_status.slaves_responding) {
+            printk(KERN_INFO PFX "slaves_responding changed to %u.\n",
+                    master_status.slaves_responding);
+        }
+       
+        old_status = master_status;
     }
 
 #ifdef KBUS
@@ -135,25 +158,25 @@ int __init init_mini_module(void)
     ec_slave_t *slave;
 #endif
 
-    printk(KERN_INFO "=== Starting Minimal EtherCAT environment... ===\n");
+    printk(KERN_INFO PFX "Starting...\n");
 
     if (!(master = ecrt_request_master(0))) {
-        printk(KERN_ERR "Requesting master 0 failed!\n");
+        printk(KERN_ERR PFX "Requesting master 0 failed!\n");
         goto out_return;
     }
 
     ecrt_master_callbacks(master, request_lock, release_lock, NULL);
 
-    printk(KERN_INFO "Registering domain...\n");
+    printk(KERN_INFO PFX "Registering domain...\n");
     if (!(domain1 = ecrt_master_create_domain(master))) {
-        printk(KERN_ERR "Domain creation failed!\n");
+        printk(KERN_ERR PFX "Domain creation failed!\n");
         goto out_release_master;
     }
 
-    printk(KERN_INFO "Registering PDOs...\n");
+    printk(KERN_INFO PFX "Registering PDOs...\n");
 #if 1
     if (ecrt_domain_register_pdo_list(domain1, domain1_pdos)) {
-        printk(KERN_ERR "PDO registration failed!\n");
+        printk(KERN_ERR PFX "PDO registration failed!\n");
         goto out_release_master;
     }
 #endif
@@ -161,12 +184,12 @@ int __init init_mini_module(void)
 #ifdef KBUS
     if (!ecrt_domain_register_pdo_range(domain1, "0", Beckhoff_BK1120,
                                         EC_DIR_OUTPUT, 0, 4, &r_outputs)) {
-        printk(KERN_ERR "PDO registration failed!\n");
+        printk(KERN_ERR PFX "PDO registration failed!\n");
         goto out_release_master;
     }
     if (!ecrt_domain_register_pdo_range(domain1, "0", Beckhoff_BK1120,
                                         EC_DIR_INPUT, 0, 4, &r_inputs)) {
-        printk(KERN_ERR "PDO registration failed!\n");
+        printk(KERN_ERR PFX "PDO registration failed!\n");
         goto out_release_master;
     }
 #endif
@@ -179,19 +202,19 @@ int __init init_mini_module(void)
         goto out_release_master;
 #endif
 
-    printk(KERN_INFO "Activating master...\n");
+    printk(KERN_INFO PFX "Activating master...\n");
     if (ecrt_master_activate(master)) {
-        printk(KERN_ERR "Failed to activate master!\n");
+        printk(KERN_ERR PFX "Failed to activate master!\n");
         goto out_release_master;
     }
 
-    printk("Starting cyclic sample thread.\n");
+    printk(KERN_INFO PFX "Starting cyclic sample thread.\n");
     init_timer(&timer);
     timer.function = run;
     timer.expires = jiffies + 10;
     add_timer(&timer);
 
-    printk(KERN_INFO "=== Minimal EtherCAT environment started. ===\n");
+    printk(KERN_INFO PFX "Started.\n");
     return 0;
 
  out_release_master:
@@ -204,13 +227,13 @@ int __init init_mini_module(void)
 
 void __exit cleanup_mini_module(void)
 {
-    printk(KERN_INFO "=== Stopping Minimal EtherCAT environment... ===\n");
+    printk(KERN_INFO PFX "Stopping...\n");
 
     del_timer_sync(&timer);
-    printk(KERN_INFO "Releasing master...\n");
+    printk(KERN_INFO PFX "Releasing master...\n");
     ecrt_release_master(master);
 
-    printk(KERN_INFO "=== Minimal EtherCAT environment stopped. ===\n");
+    printk(KERN_INFO PFX "Stopped.\n");
 }
 
 /*****************************************************************************/
