@@ -15,12 +15,14 @@ Changes in version 1.3.0:
   device ID lists.
 * Changed format of sysconfig file and accordingly adjusted functionality
   of the init script to handle device ID lists.
+* Realtime interface changes:
+  - Added ecrt_master_get_status() to get information about the bus.
 * Device interface changes:
   - Replaced ecdev_register() and ecdev_unregister() with ecdev_offer() and
     ecdev_withdraw(), respectively. The device modules now offer all their
     devices to the master, which decides, which ones to register.
 * All EEPROM write operations from user space are now blocking until
-  completion and returning appropriate error codes.
+  writing has finished and return appropriate error codes.
 * Implemented setting of secondary slave address (alias) via sysfs.
 * Removed annoying eeprom_write_enable file. EEPROM writing always enabled.
 * Removed EtherCAT line comments from 8139too drivers.
